--- a/_posts/2018-7-7-CoralNo2.markdown
+++ b/_posts/2018-7-7-CoralNo2.markdown
@@ -1,14 +1,15 @@
 ---
 layout: post
-title:  Dahlia
-date:   2019-8-8 15:01:35 +0300
-image:  '/images/Dahlia0.jpg'
-tags:   [Florals, Wall Decor, Art]
+title:  Coral No. 2
+date:   2018-7-7 15:01:35 +0300
+image:  '/images/Coral20.jpg'
+tags:   [Corals, Wall Decor, Art]
 ---
 ### Design Features:
 * Can be displayed on any surface or hung on a wall (includes hanging system).
 * Each piece is meticulously hand-built, with each petal, and coral pinched and shaped by hand before being applied to a clay base.
 * Material: black clay, white porcelain
+
 
 <div class="table-container">
   <table>
@@ -21,14 +22,14 @@ tags:   [Florals, Wall Decor, Art]
   </table>
 </div>
 
-
-
 <div class="gallery-box">
   <div class="gallery">
-    <img src="/images/Dahlia1.jpg">
-    <img src="/images/Dahlia2.jpg">
-    <img src="/images/Dahlia3.jpg">
+    <img src="/images/Coral21.jpg">
+    <img src="/images/Coral22.jpg">
+ 
+	
+ 
   </div>
 </div>
 
-![Picture]({{site.baseurl}}/images/Dahlia7.jpg)
+![Picture]({{site.baseurl}}/images/Coral27.jpg)
