--- a/_posts/2019-9-9-RosesNo1.markdown
+++ b/_posts/2019-9-9-RosesNo1.markdown
@@ -7,7 +7,8 @@ image:  '/images/Roses10.jpg'
 tags:   [Florals, Wall Decor, Art]
 ---
 ### Design Features:
-* To display on any surface or to hang on a wall <br>(completed with a hanging system) 
+* Can be displayed on any surface or hung on a wall (includes hanging system).
+* Each piece is meticulously hand-built, with each petal, and coral pinched and shaped by hand before being applied to a clay base.
 * Material: black clay, white porcelain
 
 
