--- a/_posts/2019-2-2-Eggs.markdown
+++ b/_posts/2019-2-2-Eggs.markdown
@@ -9,31 +9,21 @@ tags:   [Gift Ideas, Tableware, Art]
 * These egg cups will make your breakfast feel like a little celebration!
 * Material: Imagine smooth white porcelain with a soft lavender glaze, earthy stoneware kissed by a rustic speckled finish, rich red clay crowned in glossy emerald, and warm terracotta with a bold cobalt blue glaze—each piece a unique clay-and-glaze masterpiece!
 * Food-safe and dishwasher-safe
-* Price: Each $40 (€38) Grab a set of 6 or more, and enjoy special pricing!
 
+
+Grab a set of 4 or more, and enjoy special pricing!
 
 
 <div class="table-container">
   <table>
     <tr><th>Size</th><th>Dimension (Inches)</th><th>Price (USD)</th><th>Dimension (cm)</th><th>Price (EUR)</th></tr>
-    <tr><td>S</td><td>~4'' x 1.5''</td><td>$25</td><td>~10 x 8cm</td><td>€23</td></tr>
-    <tr><td>M</td><td>~16'' x 2''</td><td>$40</td><td>16 x 5 cm</td><td>€38</td></tr>
-    <tr><td>L</td><td>~7'' x 3,5''</td><td>$75</td><td>19 x 9 cm</td><td>€70</td></tr>
-	<tr><td>XL</td><td>~11'' x 3''</td><td>$140</td><td>28 x 8 cm</td><td>€130</td></tr>
+    <tr><td>1</td><td>~3.5''</td><td>$33</td><td>~9 cm</td><td>€30</td></tr>
+    <tr><td>4 or more</td><td>~3.5''</td><td>$26</td><td>~9 cm</td><td>€25</td></tr>
+	<tr><td>6 or more</td><td>~3.5''</td><td>$20</td><td>~9 cm</td><td>€19</td></tr>
+  
   
   </table>
+
 </div>
 
-
-
-<div class="gallery-box">
-  <div class="gallery">
-    <img src="/images/OceanBowls1.jpg">
-    <img src="/images/OceanBowls2.jpg">
-    <img src="/images/OceanBowls3.jpg">
-
- 
-  </div>
-</div>
-
-![Picture]({{site.baseurl}}/images/OceanBowls7.jpg)
+![Picture]({{site.baseurl}}/images/Egg7.jpg)
