--- a/_posts/2019-10-10-RosesNo1.markdown
+++ b/_posts/2019-10-10-RosesNo1.markdown
@@ -4,7 +4,7 @@ title:  Roses No. 1
 description:
 date:   2019-10-10 15:01:35 +0300
 image:  '/images/Roses20.jpg'
-tags:   [Florals, Wall Decor, Art]
+tags:   [Florals, Wallart, Art]
 ---
 ### Design Features:
 * Can be displayed on any surface or hung on a wall (includes hanging system).
