--- a/_posts/2018-6-6-CoralNo3.markdown
+++ b/_posts/2018-6-6-CoralNo3.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  Coral No. 3
 date:   2018-6-6 15:01:35 +0300
 image:  '/images/Coral30.jpg'
-tags:   [Corals, Wall Decor, Art]
+tags:   [Corals, Wallart, Art]
 ---
 ### Design Features:
 * Can be displayed on any surface or hung on a wall (includes hanging system).
