--- a/_posts/2019-2-2-Dahlia.markdown
+++ b/_posts/2019-2-2-Dahlia.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  Dahlia
 date:   2019-8-8 15:01:35 +0300
 image:  '/images/Dahlia0.jpg'
-tags:   [Florals, Wall Decor, Art]
+tags:   [Florals, Wallart, Art]
 ---
 ### Design Features:
 * Can be displayed on any surface or hung on a wall (includes hanging system).
