--- a/_posts/2019-4-4-Cloves.markdown
+++ b/_posts/2019-4-4-Cloves.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  Cloves
+description: Can be hung on a wall (includes hanging system) or be displayed on any surface.
 date:   2019-4-4 15:01:35 +0300
 image:  '/images/Cloves0.jpg'
 tags:   [Florals, Wallart, Art]
