--- a/_posts/2019-9-9-RosesNo2.markdown
+++ b/_posts/2019-9-9-RosesNo2.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  Roses No. 2
-description: Heute ist ein schöner Tag
+description: Can be hung on a wall (includes hanging system) or be displayed on any surface.
 date:   2019-9-9 15:01:35 +0300
 image:  '/images/Roses10.jpg'
 tags:   [Florals, Wallart, Art]
@@ -26,9 +26,9 @@ tags:   [Florals, Wallart, Art]
 
 <div class="gallery-box">
   <div class="gallery">
-    <img src="/images/Roses11.jpg">
-    <img src="/images/Roses12.jpg">
-    <img src="/images/Roses13.jpg">
+    <img src="/website_susan/images/Roses11.jpg">
+    <img src="/website_susan/images/Roses12.jpg">
+    <img src="/website_susan/images/Roses13.jpg">
 	
  
   </div>
