--- a/_posts/2019-2-2-Dahlia.markdown
+++ b/_posts/2019-2-2-Dahlia.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  Dahlia
+description: Can be hung on a wall (includes hanging system) or be displayed on any surface.
 date:   2019-8-8 15:01:35 +0300
 image:  '/images/Dahlia0.jpg'
 tags:   [Florals, Wallart, Art]
@@ -25,9 +26,9 @@ tags:   [Florals, Wallart, Art]
 
 <div class="gallery-box">
   <div class="gallery">
-    <img src="/images/Dahlia1.jpg">
-    <img src="/images/Dahlia2.jpg">
-    <img src="/images/Dahlia3.jpg">
+    <img src="/website_susan/images/Dahlia1.jpg">
+    <img src="/website_susan/images/Dahlia2.jpg">
+    <img src="/website_susan/images/Dahlia3.jpg">
   </div>
 </div>
 
