--- a/_posts/2019-2-2-Dahlia.markdown
+++ b/_posts/2019-2-2-Dahlia.markdown
@@ -26,9 +26,9 @@ tags:   [Florals, Wallart, Art]
 
 <div class="gallery-box">
   <div class="gallery">
-    <img src="/website_susan/images/Dahlia1.jpg">
-    <img src="/website_susan/images/Dahlia2.jpg">
-    <img src="/website_susan/images/Dahlia3.jpg">
+    <img src="/website_susan/images/Dahlia11.jpg">
+    <img src="/website_susan/images/Dahlia12.jpg">
+    <img src="/website_susan/images/Dahlia13jpg">
   </div>
 </div>
 
