final picture change

--- a/_posts/2019-2-2-Dahlia.markdown
+++ b/_posts/2019-2-2-Dahlia.markdown
@@ -28,7 +28,7 @@ tags:   [Florals, Wallart, Art]
   <div class="gallery">
     <img src="/website_susan/images/Dahlia11.jpg">
     <img src="/website_susan/images/Dahlia12.jpg">
-    <img src="/website_susan/images/Dahlia13jpg">
+    <img src="/website_susan/images/Dahlia13.jpg">
   </div>
 </div>
 
