--- a/_posts/2018-7-7-CoralNo2.markdown
+++ b/_posts/2018-7-7-CoralNo2.markdown
@@ -25,8 +25,8 @@ tags:   [Corals, Wallart, Art]
 
 <div class="gallery-box">
   <div class="gallery">
-    <img src="/website_susan/images/Coral21.jpg">
-    <img src="/website_susan/images/Coral22.jpg">
+    <img src="/images/Coral21.jpg">
+    <img src="/images/Coral22.jpg">
  
 	
  
