--- a/_posts/2019-9-9-RosesNo2.markdown
+++ b/_posts/2019-9-9-RosesNo2.markdown
@@ -26,9 +26,9 @@ tags:   [Florals, Wallart, Art]
 
 <div class="gallery-box">
   <div class="gallery">
-    <img src="/website_susan/images/Roses11.jpg">
-    <img src="/website_susan/images/Roses12.jpg">
-    <img src="/website_susan/images/Roses13.jpg">
+    <img src="/images/Roses11.jpg">
+    <img src="/images/Roses12.jpg">
+    <img src="/images/Roses13.jpg">
 	
  
   </div>
